--- a/src/omniintelligence/nodes/context_keyword_extractor_compute/contract.yaml
+++ b/src/omniintelligence/nodes/context_keyword_extractor_compute/contract.yaml
@@ -1,3 +1,4 @@
+---
 # ONEX Node Contract - Context Keyword Extractor Compute Node
 #
 # Part of pattern_extraction split (Track 2 Intelligence Hook System)
@@ -5,10 +6,15 @@ contract_version:
   major: 1
   minor: 0
   patch: 0
-node_version: "1.0.0"
+node_version:
+  major: 1
+  minor: 0
+  patch: 0
 name: "context_keyword_extractor_compute"
 node_type: "COMPUTE_GENERIC"
-description: "Compute node for extracting contextual keywords from code and documentation. Identifies key terms, domain concepts, and technical vocabulary."
+description: >-
+  Compute node for extracting contextual keywords from code and documentation. Identifies key terms, domain
+  concepts, and technical vocabulary.
 input_model:
   name: "ModelKeywordExtractionInput"
   module: "omniintelligence.nodes.context_keyword_extractor_compute.models"
@@ -29,11 +35,12 @@ operations:
       - success
       - keywords
       - keyword_contexts
-dependencies:
-  - name: "keyword_extractor"
-    type: "protocol"
-    module: "omniintelligence.protocols"
-    description: "Keyword extraction engine"
+# TODO: Create omniintelligence.protocols module with keyword extractor protocol
+dependencies: []
+# - name: "keyword_extractor"
+#   type: "protocol"
+#   module: "omniintelligence.protocols"
+#   description: "Keyword extraction engine"
 health_check:
   enabled: true
   endpoint: "/health"
