--- a/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
@@ -1,3 +1,4 @@
+---
 # ONEX Node Contract - Intent Classifier Compute Node
 #
 # Part of pattern_extraction split (Track 2 Intelligence Hook System)
@@ -5,10 +6,15 @@ contract_version:
   major: 1
   minor: 0
   patch: 0
-node_version: "1.0.0"
+node_version:
+  major: 1
+  minor: 0
+  patch: 0
 name: "intent_classifier_compute"
 node_type: "COMPUTE_GENERIC"
-description: "Compute node for classifying user intents from code patterns and execution traces. Maps observed behavior to intent categories."
+description: >-
+  Compute node for classifying user intents from code patterns and execution traces. Maps observed behavior
+  to intent categories.
 input_model:
   name: "ModelIntentClassificationInput"
   module: "omniintelligence.nodes.intent_classifier_compute.models"
@@ -29,11 +35,12 @@ operations:
       - intent_category
       - confidence
       - secondary_intents
-dependencies:
-  - name: "intent_classifier"
-    type: "protocol"
-    module: "omniintelligence.protocols"
-    description: "Intent classification engine"
+# TODO: Create omniintelligence.protocols module with intent classifier protocol
+dependencies: []
+# - name: "intent_classifier"
+#   type: "protocol"
+#   module: "omniintelligence.protocols"
+#   description: "Intent classification engine"
 health_check:
   enabled: true
   endpoint: "/health"
