--- a/src/omniintelligence/nodes/pattern_matching_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_matching_compute/contract.yaml
@@ -1,12 +1,18 @@
+---
 # ONEX Node Contract - Pattern Matching Compute Node
 contract_version:
   major: 1
   minor: 0
   patch: 0
-node_version: "1.0.0"
+node_version:
+  major: 1
+  minor: 0
+  patch: 0
 name: "pattern_matching_compute"
 node_type: "COMPUTE_GENERIC"
-description: "Compute node for matching code patterns against a pattern library. Identifies design patterns, anti-patterns, and custom patterns."
+description: >-
+  Compute node for matching code patterns against a pattern library. Identifies design patterns, anti-patterns,
+  and custom patterns.
 input_model:
   name: "ModelPatternMatchingInput"
   module: "omniintelligence.nodes.pattern_matching_compute.models"
@@ -26,11 +32,12 @@ operations:
       - success
       - patterns_matched
       - pattern_scores
-dependencies:
-  - name: "pattern_library"
-    type: "protocol"
-    module: "omniintelligence.protocols"
-    description: "Pattern library for matching"
+# TODO: Create omniintelligence.protocols module with pattern library protocol
+dependencies: []
+# - name: "pattern_library"
+#   type: "protocol"
+#   module: "omniintelligence.protocols"
+#   description: "Pattern library for matching"
 health_check:
   enabled: true
   endpoint: "/health"
