--- a/src/omniintelligence/nodes/relationship_detection_compute/contract.yaml
+++ b/src/omniintelligence/nodes/relationship_detection_compute/contract.yaml
@@ -1,12 +1,18 @@
+---
 # ONEX Node Contract - Relationship Detection Compute Node
 contract_version:
   major: 1
   minor: 0
   patch: 0
-node_version: "1.0.0"
+node_version:
+  major: 1
+  minor: 0
+  patch: 0
 name: "relationship_detection_compute"
 node_type: "COMPUTE_GENERIC"
-description: "Compute node for detecting relationships between code entities. Identifies dependencies, inheritance, composition, and other relationships."
+description: >-
+  Compute node for detecting relationships between code entities. Identifies dependencies, inheritance,
+  composition, and other relationships.
 input_model:
   name: "ModelRelationshipDetectionInput"
   module: "omniintelligence.nodes.relationship_detection_compute.models"
@@ -25,11 +31,12 @@ operations:
       - success
       - relationships
       - relationship_count
-dependencies:
-  - name: "relationship_analyzer"
-    type: "protocol"
-    module: "omniintelligence.protocols"
-    description: "Relationship analysis engine"
+# TODO: Create omniintelligence.protocols module with relationship analyzer protocol
+dependencies: []
+# - name: "relationship_analyzer"
+#   type: "protocol"
+#   module: "omniintelligence.protocols"
+#   description: "Relationship analysis engine"
 health_check:
   enabled: true
   endpoint: "/health"
