--- a/src/omniintelligence/nodes/semantic_analysis_compute/contract.yaml
+++ b/src/omniintelligence/nodes/semantic_analysis_compute/contract.yaml
@@ -1,12 +1,18 @@
+---
 # ONEX Node Contract - Semantic Analysis Compute Node
 contract_version:
   major: 1
   minor: 0
   patch: 0
-node_version: "1.0.0"
+node_version:
+  major: 1
+  minor: 0
+  patch: 0
 name: "semantic_analysis_compute"
 node_type: "COMPUTE_GENERIC"
-description: "Compute node for semantic analysis of code. Analyzes meaning, intent, and semantic relationships in code constructs."
+description: >-
+  Compute node for semantic analysis of code. Analyzes meaning, intent, and semantic relationships in
+  code constructs.
 input_model:
   name: "ModelSemanticAnalysisInput"
   module: "omniintelligence.nodes.semantic_analysis_compute.models"
@@ -26,11 +32,12 @@ operations:
       - semantic_features
       - embeddings
       - similarity_scores
-dependencies:
-  - name: "semantic_model"
-    type: "protocol"
-    module: "omniintelligence.protocols"
-    description: "Semantic analysis model"
+# TODO: Create omniintelligence.protocols module with semantic model protocol
+dependencies: []
+# - name: "semantic_model"
+#   type: "protocol"
+#   module: "omniintelligence.protocols"
+#   description: "Semantic analysis model"
 health_check:
   enabled: true
   endpoint: "/health"
