fix: address PR #10 review feedback - formatting, ONEX tags, model validation
- Fix CI failure: ruff formatting for contract_linter.py
- Add "ONEX" tag to metadata.tags in all 20 contract.yaml files
- Add score range validation (0.0-1.0) to quality_score, confidence fields
- Add field_validator for dimension scores and similarity_scores dicts
- Remove unused Optional imports from model files

Changes:
- contract_linter.py: ruff formatting fix
- 20 contract.yaml files: added ONEX tag to metadata
- model_quality_scoring_output.py: ge/le constraints + dimension validator
- model_intent_classification_output.py: ge/le constraints for confidence
- model_semantic_analysis_output.py: similarity_scores validator
- model_intelligence_output.py: quality_score validation
- model_entity_extraction_input.py: removed unused import
- model_semantic_analysis_input.py: removed unused import

--- a/src/omniintelligence/nodes/postgres_pattern_effect/contract.yaml
+++ b/src/omniintelligence/nodes/postgres_pattern_effect/contract.yaml
@@ -79,6 +79,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "effect"
     - "postgresql"
     - "patterns"
