--- a/src/omniintelligence/nodes/intelligence_adapter/contract.yaml
+++ b/src/omniintelligence/nodes/intelligence_adapter/contract.yaml
@@ -154,6 +154,7 @@ metadata:
   created: "2025-10-21"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "effect"
     - "intelligence"
     - "adapter"
