--- a/src/omniintelligence/nodes/intelligence_api_effect/contract.yaml
+++ b/src/omniintelligence/nodes/intelligence_api_effect/contract.yaml
@@ -82,6 +82,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "effect"
     - "api"
     - "intelligence"
