--- a/src/omniintelligence/nodes/intelligence_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/intelligence_orchestrator/contract.yaml
@@ -210,6 +210,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "orchestrator"
     - "intelligence"
     - "workflows"
