--- a/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
@@ -50,6 +50,7 @@ metadata:
   created: "2025-10-02"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "compute"
     - "intent"
     - "classifier"
