--- a/src/omniintelligence/nodes/pattern_assembler_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_assembler_orchestrator/contract.yaml
@@ -94,6 +94,7 @@ metadata:
   created: "2025-10-02"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "orchestrator"
     - "pattern"
     - "assembly"
