--- a/src/omniintelligence/nodes/pattern_learning_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_learning_compute/contract.yaml
@@ -37,6 +37,7 @@ metadata:
   updated: "2026-01-18"
   status: "stub"
   tags:
+    - "ONEX"
     - "compute"
     - "pattern-learning"
     - "stub"
