--- a/src/omniintelligence/nodes/pattern_matching_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_matching_compute/contract.yaml
@@ -47,6 +47,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "compute"
     - "patterns"
     - "matching"
