--- a/src/omniintelligence/nodes/qdrant_vector_effect/contract.yaml
+++ b/src/omniintelligence/nodes/qdrant_vector_effect/contract.yaml
@@ -78,6 +78,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "effect"
     - "qdrant"
     - "vectors"
