--- a/src/omniintelligence/nodes/quality_scoring_compute/contract.yaml
+++ b/src/omniintelligence/nodes/quality_scoring_compute/contract.yaml
@@ -50,6 +50,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "compute"
     - "quality"
     - "scoring"
