--- a/src/omniintelligence/nodes/relationship_detection_compute/contract.yaml
+++ b/src/omniintelligence/nodes/relationship_detection_compute/contract.yaml
@@ -46,6 +46,7 @@ metadata:
   created: "2025-11-14"
   updated: "2026-01-18"
   tags:
+    - "ONEX"
     - "compute"
     - "relationships"
     - "detection"
