fix: address all PR #10 review issues for release readiness
Critical fixes:
- Protected LOG_LEVEL parsing in 7 __main__.py files with safe fallback
- Re-raised asyncio.CancelledError to preserve shutdown semantics
- Fixed processing time access in example_usage.py

Type safety improvements:
- Added TypedDict for structured context types in pattern_matching_input
- Added TypedDict for reducer payload in model_reducer_input
- Added TypedDict for intent classification context
- Improved keyword extraction output model with proper typing
- Enhanced relationship detection output with proper typing

Contract & model fixes:
- Fixed YAML formatting in intelligence_reducer/contract.yaml
- Added compute_node reference to pattern_assembler_orchestrator
- Added TODO tracking comments in contract dependencies
- Standardized field names (source_path vs file_path)

Node implementation fixes:
- Pattern matching compute returns typed ModelPatternMatchingOutput
- Quality scoring compute returns proper model with all fields
- Qdrant vector effect returns correct output model shape
- Ingestion effect returns proper ModelIngestionOutput

ONEX compliance:
- Added io-audit whitelist for __main__.py entrypoint files
- Removed deprecated kafka_event_effect test files
- Regenerated uv.lock for consistency

All CI checks pass:
- yamlfmt, ruff lint/format, mypy, io-audit, pytest smoke tests

--- a/src/omniintelligence/nodes/quality_scoring_compute/contract.yaml
+++ b/src/omniintelligence/nodes/quality_scoring_compute/contract.yaml
@@ -35,7 +35,12 @@ operations:
       - dimensions
       - onex_compliant
       - recommendations
-# TODO: Create omniintelligence.protocols module with quality analyzer protocol
+# TODO(ONEX-PROTO-003): Create omniintelligence.protocols module with quality analyzer protocol
+# - Create protocols/ directory with QualityAnalyzerProtocol
+# - Define interface for quality analysis (analyze, score, get_recommendations)
+# - Currently no protocols directory exists - this is a placeholder for future implementation
+# - Tracked in: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - v0.4.0)
+#
 dependencies: []
 # - name: "quality_analyzer"
 #   type: "protocol"
