--- a/src/omniintelligence/nodes/intelligence_reducer/contract.yaml
+++ b/src/omniintelligence/nodes/intelligence_reducer/contract.yaml
@@ -362,9 +362,9 @@ idempotency:
   strategy: "event_id_tracking"
   derivation: "deterministic_hash"
   hash_fields:
-    - "entity_id"      # Required - validated above
-    - "fsm_type"       # Required - validated above
-    - "action"         # Required - validated above
+    - "entity_id"  # Required - validated above
+    - "fsm_type"  # Required - validated above
+    - "action"  # Required - validated above
   # Optional: If event_id is provided in input, use it directly instead of hash
   fallback_to_event_id: true
   description: "Skip duplicate actions based on event_id or derived hash from validated fields"
@@ -384,18 +384,22 @@ dependencies:
 error_handling:
   error_types:
     - name: "ReducerValidationError"
+      error_code: "REDUCER_VALIDATION_ERROR"
       description: "Input validation failed (e.g., missing entity_id or invalid fsm_type)"
       recoverable: false
       retry_strategy: "none"
     - name: "InvalidTransitionError"
+      error_code: "REDUCER_INVALID_TRANSITION"
       description: "Invalid FSM state transition attempted"
       recoverable: false
       retry_strategy: "none"
     - name: "StatePersistenceError"
+      error_code: "REDUCER_STATE_PERSISTENCE_ERROR"
       description: "Error persisting FSM state to database"
       recoverable: true
       retry_strategy: "exponential_backoff"
     - name: "DuplicateActionError"
+      error_code: "REDUCER_DUPLICATE_ACTION"
       description: "Duplicate action detected via idempotency check"
       recoverable: false
       retry_strategy: "none"
