--- a/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
@@ -35,7 +35,12 @@ operations:
       - intent_category
       - confidence
       - secondary_intents
-# TODO: Create omniintelligence.protocols module with intent classifier protocol
+# TODO(ONEX-PROTO-002): Create omniintelligence.protocols module with intent classifier protocol
+# - Create protocols/ directory with IntentClassifierProtocol
+# - Define interface for intent classification (classify, get_categories, get_confidence)
+# - Currently no protocols directory exists - this is a placeholder for future implementation
+# - Tracked in: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - v0.4.0)
+#
 dependencies: []
 # - name: "intent_classifier"
 #   type: "protocol"
