--- a/src/omniintelligence/nodes/pattern_assembler_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_assembler_orchestrator/contract.yaml
@@ -109,18 +109,22 @@ error_handling:
     reset_timeout_ms: 60000
   error_types:
     - name: "TraceParsingError"
+      error_code: "PATTERN_ASSEMBLER_TRACE_PARSING_ERROR"
       description: "Error during execution trace parsing"
       recoverable: true
       retry_strategy: "exponential_backoff"
     - name: "KeywordExtractionError"
+      error_code: "PATTERN_ASSEMBLER_KEYWORD_EXTRACTION_ERROR"
       description: "Error during keyword extraction"
       recoverable: true
       retry_strategy: "exponential_backoff"
     - name: "PatternAssemblyError"
+      error_code: "PATTERN_ASSEMBLER_ASSEMBLY_ERROR"
       description: "Error during pattern assembly"
       recoverable: true
       retry_strategy: "exponential_backoff"
     - name: "WorkflowTimeoutError"
+      error_code: "PATTERN_ASSEMBLER_WORKFLOW_TIMEOUT"
       description: "Workflow execution exceeded timeout"
       recoverable: false
       retry_strategy: "none"
